add endpoint scan tree and upload tree
